--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,14 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="taskGreenBreak">#85e085</color>
+    <color name="taskBlueExercise">#b3d9ff</color>
+    <color name="taskRed">#ff6666</color>
+    <color name="taskOrange">#ffcc00</color>
+    <color name="taskYellow">#ffff66</color>
+    <color name="taskGreen">#00cc44</color>
+    <color name="taskBlue">#3399ff</color>
+    <color name="taskIndigo">#bf80ff</color>
+    <color name="taskViolet">#ff99ff</color>
 </resources>
