Attempt to create and load a task
A task is currently being attempted to be stored in a SINGLE FILE. The
idea: the file will be loaded and the object loaded (a savepackage) will
be taken out and appended to with the new method setTaskModels().
Currently, there is no error saving although there is a null pointer
exception when the getTaskModels() method is ran when trying to display
the tasks. There are no errors in loading the file although nothing may
be loaded or saved.

--- a/app/src/main/res/layout/activity_task_viewer.xml
+++ b/app/src/main/res/layout/activity_task_viewer.xml
@@ -22,4 +22,23 @@
         app:headerLayout="@layout/nav_header_task_viewer"
         app:menu="@menu/activity_task_viewer_drawer" />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/scrollView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <LinearLayout
+            android:id="@+id/task_holder"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <!-- Is programtically filled -->
+
+        </LinearLayout>
+
+    </ScrollView>
+
 </android.support.v4.widget.DrawerLayout>
