--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -114,6 +114,7 @@
         android:layout_height="wrap_content"
         android:text="Submit"
         android:id="@+id/button3"
+        android:onClick="verifyInfo"
         android:layout_marginBottom="50dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
