--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,64 +7,141 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/bg"
     tools:context="com.bcit.pomodoro.pomodoroplus.MainActivity">
 
 
     <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Welcome to"
+        android:fontFamily="monospace"
+        android:textStyle="bold"
+        android:textSize="40dp"
+        android:id="@+id/textView2"
+        android:layout_toRightOf="@+id/ivPomo"
+        android:layout_toEndOf="@+id/ivPomo"/>
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Welcome to Pomodoro+"
-        android:id="@+id/textView2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="128dp" />
+        android:text="Pomodoro+"
+        android:fontFamily="monospace"
+        android:textStyle="bold"
+        android:textSize="40dp"
+        android:id="@+id/textView"
+        android:layout_marginTop="-10dp"
+        android:layout_below="@+id/textView2"
+        android:layout_toRightOf="@+id/ivPomo"
+        android:layout_toEndOf="@+id/ivPomo" />
+
 
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_toLeftOf="@id/textView2"
-        android:layout_marginTop="120dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:id="@+id/ivPomo"
-        android:src="@drawable/pomo" />
+        android:src="@drawable/pomo"
+        android:layout_marginTop="15dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-    <Button
-        android:layout_width="wrap_content"
+    <TableLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="View tasks"
-        android:id="@+id/button"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/textView2"
-        android:layout_marginTop="30dp"
-        android:onClick="onViewTaskClick"/>
+        android:layout_centerVertical="true">
+        <!--
+        <TableRow>
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:id="@+id/ivPomo"
+                android:src="@drawable/pomo" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Pomodoro+"
+                android:fontFamily="monospace"
+                android:textStyle="bold"
+                android:textSize="30dp"
+                android:id="@+id/textView"/>
+        </TableRow>-->
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Select a date"
-        android:id="@+id/button2"
-        android:onClick="onCreateTaskClick"
-        android:layout_below="@+id/button"
-        android:layout_centerHorizontal="true" />
+        <TableRow
+            android:gravity="center_horizontal"
+            android:layout_marginTop="10dp">
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:id="@+id/ivCreate"
+                android:onClick="onCreateClick"
+                android:src="@drawable/task_create2" />
+            <TextView
+                android:width="50dp"/>
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:id="@+id/ivCheck"
+                android:onClick="onViewTaskClick"
+                android:src="@drawable/task_check2" />
+        </TableRow>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Create Task"
-        android:id="@+id/btCreate"
-        android:onClick="onCreateClick"
-        android:layout_below="@+id/button2"
-        android:layout_centerHorizontal="true" />
+        <TableRow android:gravity="center_horizontal">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Create Task"
+                android:layout_gravity="center_horizontal"
+                android:onClick="onCreateClick"
+                android:id="@+id/tvCreate" />
+            <TextView />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="View Tasks"
+                android:layout_gravity="center_horizontal"
+                android:onClick="onViewTaskClick"
+                android:id="@+id/tvView" />
+        </TableRow>
+        <TableRow android:gravity="center_horizontal"
+            android:layout_marginTop="20dp">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Settings"
-        android:id="@+id/btSettings"
-        android:onClick="onSettingClick"
-        android:layout_below="@+id/btCreate"
-        android:layout_centerHorizontal="true" />
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:id="@+id/ivCalender"
+                android:onClick="onCreateTaskClick"
+                android:src="@drawable/calendar2" />
+            <TextView />
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:id="@+id/ivSettings"
+                android:onClick="onSettingClick"
+                android:src="@drawable/settings" />
+        </TableRow>
 
+        <TableRow android:gravity="center_horizontal">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Select date"
+                android:layout_gravity="center_horizontal"
+                android:onClick="onCreateTaskClick"
+                android:id="@+id/tvCalender" />
+            <TextView />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Settings"
+                android:layout_gravity="center_horizontal"
+                android:id="@+id/tvSettings" />
+        </TableRow>
+
+    </TableLayout>
+
+
+
+
+<!--
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -72,7 +149,7 @@
         android:id="@+id/button6"
         android:onClick="onJasonClick"
         android:layout_below="@+id/btSettings"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true" />-->
 
 
 </RelativeLayout>
