--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -132,6 +132,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Settings"
+                android:onClick="onSettingClick"
                 android:layout_gravity="center_horizontal"
                 android:id="@+id/tvSettings" />
         </TableRow>
