--- a/app/src/main/res/layout/activity_create_2.xml
+++ b/app/src/main/res/layout/activity_create_2.xml
@@ -39,21 +39,19 @@
         android:ems="10"
         android:id="@+id/etDuration"
         android:layout_above="@+id/tvCategory"
-        android:layout_toLeftOf="@+id/imageView3"
-        android:layout_toStartOf="@+id/imageView3" />
+        android:layout_toLeftOf="@+id/colorSelector"
+        android:layout_toStartOf="@+id/colorSelector" />
 
     <ImageView
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:id="@+id/imageView3"
-        android:src="@drawable/color_selector"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_alignTop="@+id/etName"
-        android:layout_alignRight="@+id/button"
-        android:layout_alignEnd="@+id/button"
-        android:layout_alignBottom="@+id/etDuration"
-        android:onClick="onColorClick"/>
+        android:id="@+id/colorSelector"
+        android:onClick="onColorClick"
+        android:background="@drawable/color_selector"
+        android:layout_margin="3dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:layout_width="wrap_content"
