--- a/app/src/main/res/layout/activity_create_2.xml
+++ b/app/src/main/res/layout/activity_create_2.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#eeeeee"
     tools:context="com.bcit.pomodoro.pomodoroplus.CreateActivity">
 
 <RelativeLayout
