--- a/app/src/main/res/layout/activity_task_viewer.xml
+++ b/app/src/main/res/layout/activity_task_viewer.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.bcit.pomodoro.pomodoroplus.TaskViewerActivity">
+    tools:context="com.bcit.pomodoro.pomodoroplus.TaskViewerActivity"
+    android:background="#eeeeee">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -32,5 +33,7 @@
         </LinearLayout>
 
     </ScrollView>
+
+
 
 </RelativeLayout>
