--- a/app/src/main/res/layout/activity_date_select.xml
+++ b/app/src/main/res/layout/activity_date_select.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#eeeeee"
     android:weightSum="1">
@@ -25,6 +26,7 @@
         android:layout_below="@+id/datePicker"
         android:layout_toLeftOf="@+id/today_container"
         android:layout_toStartOf="@+id/today_container"
+        android:layout_marginTop="-15dp"
         android:layout_marginRight="40dp">
 
         <android.support.design.widget.FloatingActionButton
@@ -51,7 +53,8 @@
         android:orientation="vertical"
         android:gravity="center"
         android:layout_below="@+id/datePicker"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="-15dp">
 
         <android.support.design.widget.FloatingActionButton
             android:layout_width="wrap_content"
@@ -81,6 +84,7 @@
         android:layout_below="@+id/datePicker"
         android:layout_toRightOf="@+id/today_container"
         android:layout_toEndOf="@+id/today_container"
+        android:layout_marginTop="-15dp"
         android:layout_marginLeft="40dp">
 
         <android.support.design.widget.FloatingActionButton
